syntax = "proto3";
package guigui17f.protobuf_manager;
option csharp_namespace = "GUIGUI17F.ProtobufManager";
option optimize_for = LITE_RUNTIME;

message EnumDefinition {
  string enum_name = 1;
  bool allow_alias = 2;
  repeated string value_names = 3;
  repeated int32 value_numbers = 4;
  repeated string reserved_numbers = 5;
  repeated string reserved_names = 6;
}